--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,3 @@
-/*  *{
-    border: 1px solid red;
-}  */
 
 .arrow-btn {
     color: tomato;
@@ -40,7 +37,10 @@
     top: -20px;
     left: 25px;
     background-color: #f50404;
-    
-    
 
+}
+.accuracy{
+    position: relative;
+    top: 20px;
+    left: 150px;
 }
